Bug 101681 - GTK3: missing tooltip for hyperlink
Summary: GTK3: missing tooltip for hyperlink
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-08-23 10:43 UTC by Jean-Baptiste Faure
Modified: 2016-09-11 15:47 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2016-08-23 10:43:34 UTC
In the case where the VCL plugin GTK3 is used, pointing the mouse to an hyperlink does not show its tooltip. It works if the plugin is GTK2.

Best regards. JBF
Comment 1 Aron Budea 2016-08-24 00:16:18 UTC
Might be the same issue as bug 100841.
Comment 2 Jean-Baptiste Faure 2016-08-24 04:29:08 UTC
Same issue in master built at home : Version: 5.3.0.0.alpha0+
Build ID: db231633af4667e24281e0be69ab63ad3081fdc3
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; 
Ubuntu_16.04_x86-64
Locale: fr-FR (fr_FR.UTF-8); Calc: group

Best regards. JBF
Comment 3 Jean-Baptiste Faure 2016-08-27 06:39:30 UTC
As it works in previous versions with GTK2, set keyword regression.

Best regards. JBF
Comment 4 Arnaud Versini 2016-08-28 15:29:36 UTC
Confirmed on LibreOffice 5.2.0.4 on openSUSE Tumbleweed
Comment 5 Xisco Faulí 2016-09-01 08:18:30 UTC
Adding Caolan to the loop as he has done the GTK3 porting.
Comment 6 Caolán McNamara 2016-09-01 08:51:19 UTC
I think the problem is that writer is claiming that the tooltip area for the hyperlink is a pixel width line at the current cursor point. If the whole area of the hyperlink is reported the problem should like go away.
Comment 7 Caolán McNamara 2016-09-02 14:25:48 UTC
Resolved with https://cgit.freedesktop.org/libreoffice/core/commit/?id=84e8e11dc3c73bcfe63f5e9c6cc49ee18a511a9b wrong bug prefix, sigh
Comment 8 Commit Notification 2016-09-02 16:36:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=456b1dd03f210dc725ce134bdf9344f8e6df17aa&h=libreoffice-5-2

Resolves: tdf#101681 set hyperlink tooltip for the full hyperlink area

It will be available in 5.2.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Jean-Baptiste Faure 2016-09-02 17:17:18 UTC
Hi Caolán,

Thank you very much for the quick fix. :-) Tested and verified on 
Version: 5.2.2.0.0+
Build ID: 456b1dd03f210dc725ce134bdf9344f8e6df17aa
Threads CPU : 4; Version de l'OS :Linux 4.4; UI Render : par défaut; 
Ubuntu_16.04_x86-64
Locale : fr-FR (fr_FR.UTF-8); Calc: single

built at home.

Best regards. JBF