Resolves: tdf#101681 set hyperlink tooltip for the full hyperlink area

not just a single point in it.

This way gtk3 knows the successive tooltip hints for the positions
along the hyperlink are for the same tooltip

(cherry picked from commit 84e8e11dc3c73bcfe63f5e9c6cc49ee18a511a9b)

Change-Id: I46a8c960e528f6a9aaab5bea145c6870f22e46c5
Reviewed-on: https://gerrit.libreoffice.org/28622
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>